@@ -1,3 +1,9 @@
+2006-09-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclThreadTest.c (TclCreateThread): Use NULL instead of 0 as
+	end-of-strings marker to Tcl_AppendResult; the difference matters on
+	64-bit machines. [Bug 1562528]
+
 2006-09-21  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclUtil.c:	Dropped ParseInteger() routine.
